[package]
name = "esp32-lidar"
version = "0.1.0"
authors = ["Frank Lyaruu <frank.lyaruu@formelio.nl>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.11.0", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.17.0", features = ["async", "embassy", "esp32c3", "embassy-time-timg0", "embassy-executor-thread"] }
esp-println = { version = "0.9.0", features = ["esp32c3", "log"] }
log = { version = "0.4.20" }
esp-alloc = { version = "0.3.0" }
vl53l0x = "1.0.0"
embassy-executor = { version = "0.5.0", features = ["executor-thread", "nightly", "integrated-timers"] }
embassy-time = "0.3.0"
embassy-sync = "0.6.0"
[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
